# Aether-Red

./: Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  flowchart.mmd
config/: config.json
crates/aether_core/: Cargo.toml
crates/aether_core/src/: config.rs  crypto.rs  engine.rs  ledger.rs  lib.rs  main.rs  worker.rs
crates/aether_net/: Cargo.toml
crates/aether_net/src/: doh.rs  h2_flood.rs  lib.rs  proxy.rs  tls.rs  transport.rs
crates/aether_traits/: Cargo.toml
crates/aether_traits/src/: lib.rs
crates/aether_tui/: Cargo.toml
crates/aether_tui/src/: lib.rs
data/: aether.db
logs/: aether.log.2025-12-01
modules/mod_auth/: Cargo.toml
modules/mod_auth/src/: lib.rs
modules/mod_content/: Cargo.toml
modules/mod_content/src/: lib.rs
modules/mod_fuzz/: Cargo.toml
modules/mod_fuzz/src/: lib.rs
modules/mod_traffic/: Cargo.toml
modules/mod_traffic/src/: lib.rs
