[workspace]
resolver = "2"
members = [
    "crates/aether_core",
    "crates/aether_net",
    "crates/aether_tui",
    "crates/aether_traits",
    "modules/mod_traffic",
    "modules/mod_content",
    "modules/mod_auth",
]

[workspace.dependencies]
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rand = "0.8"
sha2 = "0.10"
argon2 = "0.5"
zeroize = { version = "1.6", features = ["derive"] }
parking_lot = "0.12"
async-trait = "0.1"
