[package]
name = "aether_core"
version = "0.1.0"
edition = "2021"

[dependencies]
aether_traits = { path = "../aether_traits" }
aether_net = { path = "../aether_net" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
sqlx = { workspace = true }
argon2 = { workspace = true }
zeroize = { workspace = true }
serde = { workspace = true }
chrono = "0.4"
mod_traffic = { path = "../../modules/mod_traffic" }
mod_content = { path = "../../modules/mod_content" }
mod_auth = { path = "../../modules/mod_auth" }
aether_tui = { path = "../aether_tui" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "aether_core"
path = "src/main.rs"
