[package]
name = "aether_core"
version = "0.1.0"
edition = "2021"

[dependencies]
aether_traits = { path = "../aether_traits" }
aether_net = { path = "../aether_net" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
sqlx = { workspace = true }
argon2 = { workspace = true }
zeroize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
http = "0.2"
chrono = "0.4"
mod_traffic = { path = "../../modules/mod_traffic" }
mod_fuzz = { path = "../../modules/mod_fuzz" }
mod_auth = { path = "../../modules/mod_auth" }
aether_tui = { path = "../aether_tui" }
notify = "6.1"
rlimit = { workspace = true }
num_cpus = { workspace = true }
flume = { workspace = true }
socket2 = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "aether_core"
path = "src/main.rs"
