[package]
name = "aether_net"
version = "0.1.0"
edition = "2021"

[dependencies]
aether_traits = { path = "../aether_traits" }
tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }

[lib]
path = "src/lib.rs"
