[package]
name = "aether_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
aether_traits = { path = "../aether_traits" }
tokio = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = "1.0"
strip-ansi-escapes = { workspace = true }

[lib]
path = "src/lib.rs"
